@@ -41,7 +41,9 @@
  *
  * @package    WiFiDogAuthServer
  * @author     Benoit Gregoire <bock@step.polymtl.ca>
+ * @author     Max Horvath <max.horvath@maxspot.de>
  * @copyright  2004-2006 Benoit Gregoire, Technologies Coeus inc.
+ * @copyright  2006 Max Horvath, maxspot GmbH
  * @version    Subversion $Id$
  * @link       http://www.wifidog.org/
  */
@@ -56,19 +58,73 @@ require_once('classes/Security.php');
 require_once('classes/Node.php');
 require_once('classes/User.php');
 require_once('classes/Network.php');
+require_once('classes/MainUI.php');
+require_once('classes/SmartyWifidog.php');
 
 // Init values
 $node = null;
 $continueToAdmin = false;
+$username = null;
+$password = null;
+$auth_source = null;
+$gw_address = null;
+$gw_port = null;
+$gw_id = null;
+$logout = null;
+
+/*
+ * General request parameter processing section
+ */
+
+if (isset($_REQUEST["username"])) {
+    $username = $db->escapeString($_REQUEST["username"]);
+}
+
+if (isset($_REQUEST["password"])) {
+    $password = $db->escapeString($_REQUEST["password"]);
+}
+
+if (isset($_REQUEST["auth_source"])) {
+    $auth_source = $db->escapeString($_REQUEST["auth_source"]);
+}
+
+if (isset($_REQUEST["gw_address"])) {
+    $gw_address = $_REQUEST['gw_address'];
+    $session->set(SESS_GW_ADDRESS_VAR, $_REQUEST['gw_address']);
+}
+
+if (isset($_REQUEST["gw_port"])) {
+    $gw_port = $_REQUEST['gw_port'];
+    $session->set(SESS_GW_PORT_VAR, $_REQUEST['gw_port']);
+}
+
+if (isset($_REQUEST["gw_id"])) {
+    $gw_id = $_REQUEST['gw_id'];
+    $session->set(SESS_GW_ID_VAR, $_REQUEST['gw_id']);
+}
+
+if (isset($_REQUEST["logout"])) {
+    $logout = $_REQUEST['logout'];
+}
+
+/*
+ * Store original URL typed by user
+ */
+if (!empty($_REQUEST['url'])) {
+    $session->set(SESS_ORIGINAL_URL_VAR, $_REQUEST['url']);
+}
+
+// Check if user wanted to enter the administration interface
+if (!empty($_REQUEST['origin']) && $_REQUEST['origin'] = "admin") {
+    $continueToAdmin = true;
+}
 
 /*
  * Start general request parameter processing section
  */
-if (!empty ($_REQUEST['gw_id'])) {
-    $gw_id = $_REQUEST['gw_id'];
-
+if (!is_null($gw_id)) {
     try {
-        $node = Node::getObject($_REQUEST['gw_id']);
+        $node = Node::getObject($gw_id);
         $hotspot_name = $node->getName();
         $network = $node->getNetwork();
     }
@@ -84,34 +140,7 @@ if (!empty ($_REQUEST['gw_id'])) {
     $network = Network::getCurrentNetwork();
 }
 
-isset ($_REQUEST["username"]) && $username = $_REQUEST["username"];
-isset ($_REQUEST["gw_address"]) && $gw_address = $_REQUEST['gw_address'];
-isset ($_REQUEST["gw_port"]) && $gw_port = $_REQUEST['gw_port'];
-isset ($_REQUEST["gw_id"]) && $gw_id = $_REQUEST['gw_id'];
-
-isset ($_REQUEST["gw_address"]) && $session->set(SESS_GW_ADDRESS_VAR, $_REQUEST['gw_address']);
-isset ($_REQUEST["gw_port"]) && $session->set(SESS_GW_PORT_VAR, $_REQUEST['gw_port']);
-isset ($_REQUEST["gw_id"]) && $session->set(SESS_GW_ID_VAR, $_REQUEST['gw_id']);
-
-/*
- * General request parameter processing section
- */
-
 /**
- * Store original URL typed by user
- *
- * @todo Manage storing of original URL typed by user
- */
-if (!empty($_REQUEST['url'])) {
-    $session->set(SESS_ORIGINAL_URL_VAR, $_REQUEST['url']);
-}
-
-// Check if user wanted to enter the administration interface
-if (!empty($_REQUEST['origin']) && $_REQUEST['origin'] = "admin") {
-    $continueToAdmin = true;
-}
-
-/*
  * Start login process section.
  *
  * If  successfull, the browser is redirected to another page
@@ -122,33 +151,37 @@ if (!empty($_REQUEST['origin']) && $_REQUEST['origin'] = "admin") {
  * the splash_only user
  */
 if ($node && $node->isSplashOnly()) {
-    $user = $network->getSplashOnlyUser();
-    $token = $user->generateConnectionToken();
-    User::setCurrentUser($user);
+    if (!is_null($gw_address) && !is_null($gw_port)) {
+        // Login from a gateway, redirect to the gateway to activate the token
+        $user = $network->getSplashOnlyUser();
+        $token = $user->generateConnectionToken();
+        User::setCurrentUser($user);
 
-    header("Location: http://" . $_REQUEST['gw_address'] . ":" . $_REQUEST['gw_port'] . "/wifidog/auth?token=" . $token);
+        header("Location: http://" . $gw_address . ":" . $gw_port . "/wifidog/auth?token=" . $token);
+    } else {
+        // Virtual login, redirect to the auth server homepage
+        header("Location: " . BASE_SSL_PATH . ($continueToAdmin ? "admin/" : ""));
+    }
 }
 
 /*
  * Normal login process
  */
-if (!empty ($_REQUEST['username']) && !empty ($_REQUEST['password']) && !empty ($_REQUEST['auth_source'])) {
+if (!is_null($username) && !is_null($password) && !is_null($auth_source)) {
     // Init values
     $errmsg = '';
-
-    $username = $db->escapeString($_REQUEST['username']);
 
     // Authenticating the user through the selected auth source.
     $network = Network::processSelectNetworkUI('auth_source');
 
-    $user = $network->getAuthenticator()->login($_REQUEST['username'], $_REQUEST['password'], $errmsg);
+    $user = $network->getAuthenticator()->login($username, $password, $errmsg);
 
     if ($user != null) {
-        if (isset ($_REQUEST['gw_address']) && isset ($_REQUEST['gw_port'])) {
+        if (!is_null($gw_address) && !is_null($gw_port)) {
             // Login from a gateway, redirect to the gateway to activate the token
             $token = $user->generateConnectionToken();
 
-            header("Location: http://" . $_REQUEST['gw_address'] . ":" . $_REQUEST['gw_port'] . "/wifidog/auth?token=" . $token);
+            header("Location: http://" . $gw_address . ":" . $gw_port . "/wifidog/auth?token=" . $token);
         } else {
             // Virtual login, redirect to the auth server homepage
             header("Location: " . BASE_SSL_PATH . ($continueToAdmin ? "admin/" : ""));
@@ -171,105 +204,102 @@ if (!empty ($_REQUEST['username']) && !empty ($_REQUEST['password']) && !empty (
  *
  * Once logged out, we display the login page
  */
-if ((!empty ($_REQUEST['logout']) && $_REQUEST['logout'] == true) && ($user = User::getCurrentUser()) != null) {
+if ((!is_null($logout) && $logout) && ($user = User::getCurrentUser()) != null) {
     $network->getAuthenticator()->logout();
 }
 
-/*
+/**
  * Start login interface section
  */
-$html = '';
-$html .= '<div id="login_form">'."\n";
-$html .= '<h1><a href="'.BASE_SSL_PATH.'signup.php">'._("Create a free account").'</a></h1>';
 
-$html .= '<h1>'._("I already have an account:").'</h1>';
-$html .= '<p class="indent">'."\n";
-$html .= '<form name="login_form" method="post">'."\n";
-if ($node != null)
-{
-    $html .= '<input type="hidden" name="gw_address" value="'.$gw_address.'">'."\n";
-    $html .= '<input type="hidden" name="gw_port" value="'.$gw_port.'">'."\n";
-    $html .= '<input type="hidden" name="gw_id" value="'.$gw_id.'">'."\n";
-}
-$html .= Network :: getSelectNetworkUI('auth_source')."<br>\n";
-$html .= _("Username (or email)").'<br>'."\n";
-$html .= '<input type="text" name="username" value="'.$username.'" size="20" id="form_username"><br>'."\n";
-$html .= _("Password").':<br>'."\n";
-$html .= '<input type="password" name="password" size="20"><br>'."\n";
-if ($error)
-{
-    $html .= '<div class="errormsg">'."\n";
-    $html .= "$error\n";
-    $html .= '</div>'."\n";
-}
+// Init Smarty
+$smarty = new SmartyWifidog();
 
-$html .= '<input class="submit" type="submit" name="submit" value="'._("Login").'">'."\n";
-;
-$html .= '</form>'."\n";
-$html .= '</p>';
+// Init ALL smarty SWITCH values
+$smarty->assign('sectionTOOLCONTENT', false);
+$smarty->assign('sectionMAINCONTENT', false);
 
-$html .= '<h1>'._("I'm having difficulties").':</h1>'."\n";
-$html .= '<ul>'."\n";
-$html .= '<li><a href="'.BASE_SSL_PATH.'lost_username.php">'._("I Forgot my username").'</a><br>'."\n";
-$html .= '<li><a href="'.BASE_SSL_PATH.'lost_password.php">'._("I Forgot my password").'</a>'."\n";
-$html .= '<li><a href="'.BASE_SSL_PATH.'resend_validation.php">'._("Re-send the validation email").'</a><br>'."\n";
-if ($error)
-{
-    $class = 'class="help"';
-}
-else
-{
-    $class = '';
-}
-$html .= '<li><a href="'.BASE_SSL_PATH.'faq.php">'._("Frequently asked questions").'</a><br>'."\n";
-$html .= '</ul>'."\n";
-$html .= '</div>'."\n";
-/* End login interface section */
-$html .= '<script language="javascript">'."\n";
-$html .= 'document.getElementById("form_username").focus()'."\n";
-$html .= '</script>'."\n";
+// Init ALL smarty values
+$smarty->assign('node', null);
+$smarty->assign('gwAddress', null);
+$smarty->assign('gwPort', null);
+$smarty->assign('gwId', null);
+$smarty->assign('selectNetworkUI', null);
+$smarty->assign('username', null);
+$smarty->assign('error', null);
+$smarty->assign('hotspot_homepage_url', null);
+$smarty->assign('hotspot_name', null);
+$smarty->assign('contents', false);
+$smarty->assign('contentArray', array());
 
-// HTML body
-$hotspot_network_name = $network->getName();
-$hotspot_network_url = $network->getHomepageURL();
-$network_logo_banner_url = COMMON_CONTENT_URL.NETWORK_LOGO_BANNER_NAME;
+/*
+ * Tool content
+ */
 
-$html_body = "<div class='login_body'><center>";
+// Set section of Smarty template
+$smarty->assign('sectionTOOLCONTENT', true);
 
-/* Node section */
+// Set details about node
+$smarty->assign('node', $node);
+$smarty->assign('gw_address', $gw_address);
+$smarty->assign('gw_port', $gw_port);
+$smarty->assign('gw_id', $gw_id);
+
+// Set network selector
+$smarty->assign('selectNetworkUI', Network::getSelectNetworkUI('auth_source'));
+
+// Set user details
+$smarty->assign('username', !is_null($username) ? $username : "");
+
+// Set error message
+$smarty->assign('error', !is_null($error) ? $error : null);
+
+// Compile HTML code
+$html = $smarty->fetch("templates/sites/login.tpl");
+
+/*
+ * Main content
+ */
+
+// Init values
+$contentArray = array();
+
+// Reset ALL smarty SWITCH values
+$smarty->assign('sectionTOOLCONTENT', false);
+$smarty->assign('sectionMAINCONTENT', false);
+
+// Set section of Smarty template
+$smarty->assign('sectionMAINCONTENT', true);
+
+/*
+ * Node section
+ */
+
 // Get all node content
-if (!empty($node))
-{
-    $hotspot_homepage_url = $node->getHomePageURL();
-    if (!empty ($hotspot_homepage_url))
-        $html_body .= "<a href=\"{$hotspot_homepage_url}\"><h1>{$node->getName()}</h1></a>";
-    else
-        $html_body .= "<h1>{$node->getName()}</h1>";
+if (!is_null($node)) {
+    // Set all information about current node
+    $smarty->assign('hotspot_homepage_url', $node->getHomePageURL());
+    $smarty->assign('hotspot_name', $node->getName());
 
     $contents = $node->getAllContent(true, null, 'login_page');
-    if ($contents)
-    {
-        $html_body .= "<table><tr><td>";
-        $html_body .= "<div class='portal_node_section'>\n";
 
-        foreach ($contents as $content)
-        {
-            if ($content->isDisplayableAt($node))
-            {
-                $html_body .= "<div class='portal_content'>\n";
-                $html_body .= $content->getUserUI();
-                $html_body .= "</div>\n";
-            }
+    if ($contents) {
+        foreach ($contents as $content) {
+            $contentArray[] = array('isDisplayableAt' => $content->isDisplayableAt($node), 'userUI' => $content->getUserUI());
         }
-        $html_body .= "</div>\n";
-        $html_body .= "</td></tr></table>";
+
+        // Set all content of current node
+        $smarty->assign('contents', true);
+        $smarty->assign('contentArray', $contentArray);
     }
 }
 
-$html_body .= "</center></div>";
+// Compile HTML code
+$html_body = $smarty->fetch("templates/sites/login.tpl");
 
-require_once('classes/MainUI.php');
-
+/*
+ * Render output
+ */
 $ui = new MainUI();
 $ui->setToolContent($html);
 $ui->setMainContent($html_body);
